3091875: fixing primary nav items wrap text as per proof of concept.

--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -131,7 +131,7 @@
   }
 
   @media (--lg) {
-    grid-column: 5 / 14;
+    grid-column: 4 / 14;
   }
 
   &[data-menu-open="true"] {
